<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hemisphere"
            android:textSize="24sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/hemisphereRadioGroup">

            <RadioButton
                android:id="@+id/northRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/north" />

            <RadioButton
                android:id="@+id/southRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/south" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/method"
            android:textSize="24sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/methodRadioGroup">

            <RadioButton
                android:id="@+id/simpleRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/simple" />

            <RadioButton
                android:id="@+id/conwayRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/conway" />

            <RadioButton
                android:id="@+id/trig1RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trig1" />

            <RadioButton
                android:id="@+id/trig2RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trig2" />
        </RadioGroup>
    </LinearLayout>

</LinearLayout>