<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="false"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="40dp"
            android:paddingTop="20dp"
            android:paddingRight="40dp"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/moon_phases"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/moonImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/n23"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/todayTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="Dzisaj: 40%"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/previousNewMoon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="Poprzedni nów: 1.12.1234 r."
                android:textSize="24sp" />

            <TextView
                android:id="@+id/nextFullMoon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="Następna pełnia: 1.12.1234 r."
                android:textSize="24sp" />

            <Button
                android:id="@+id/fullMoonButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:background="@color/colorAccent"
                android:padding="10dp"
                android:text="@string/fullmoon"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/settingsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:background="@color/colorAccent"
                android:padding="10dp"
                android:text="@string/settings"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </ScrollView>
</FrameLayout>